--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 
             <!-- 3D objsect -->
             <!-- This inserts the 3D object inside the aside container -->
-            <model-viewer src="assets/HTC_Vive_Headset.gltf" alt="VR Headset" auto-rotate camera-controls ar ios-src="assets/HTC_Vive_Headset.gltf">
+            <model-viewer src="assets/scene.gltf" alt="VR Headset" auto-rotate camera-controls ar ios-src="assets/scene.gltf">
             </model-viewer>
         </div>
 
         <!-- Content container -->
         <!-- This is for holding some brief description about the 3D object -->
         <div id="content">
-            <h2>3D VR LIVE</h2>
-            <p>The modern headsets, boost your pleasure to the MAX!</p>
+            <h2>Gashabiz</h2>
+            <p>Get your new business idea</p>
             <button>Shop</button>
         </div>
 
