fix(rendering): fixed the problem that caused the images to not render on the machine (wrong path)

--- a/index.html
+++ b/index.html
@@ -3,25 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>3D Object</title>
+    <title>Gashabiz</title>
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <link rel="stylesheet" href="css/style.css">
 
-    <!--Imports a model-viewer JavaScript code -->
-    <!--It helps to handle how the 3D Object would be displayed -->
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
 </head>
 
 <body>
-    <!-- Main Container -->
     <div id="container">
-
-        <!-- Navbar container -->
         <div id="navbar">
-            <div id="logo">
-                <img src="assets/logo.png" alt="logo">
-            </div>
             <ul>
                 <li class="active">
                     <a href="#">Home</a>
@@ -35,29 +27,29 @@
 
         <!-- An aside -->
         <!-- This is for holding the 3D object -->
+        
         <div id="aSide">
+        
 
             <!-- 3D objsect -->
             <!-- This inserts the 3D object inside the aside container -->
-            <model-viewer src="assets/scene.gltf" alt="VR Headset" auto-rotate camera-controls ar ios-src="assets/scene.gltf">
+            <!-- <model-viewer src="assets/scene.gltf" alt="VR Headset" auto-rotate camera-controls ar ios-src="assets/scene.gltf"> -->
+            <model-viewer src="assets/scene.gltf" alt="VR Headset"autoplay auto-rotate ios-src="assets/scene.gltf">
+            <!-- This work is based on "gachapon" (https://sketchfab.com/3d-models/gachapon-fbd5596018124802863a7c7bb9408c2a) by socksblends (https://sketchfab.com/socksblends) licensed under CC-BY-4.0 (http://creativecommons.org/licenses/by/4.0/) -->
             </model-viewer>
         </div>
 
         <!-- Content container -->
         <!-- This is for holding some brief description about the 3D object -->
+
         <div id="content">
-            <h2>Gashabiz</h2>
-            <p>Get your new business idea</p>
+            <h2>GashaBiz</h2>
+            <p>Gatsha' new business idea !</p>
             <button>Shop</button>
         </div>
 
-        <!-- Social media icons -->
-        <!-- This is for holding some company's social media icons and related links -->
         <div id="icons">
             <div id="iconsLogo">
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-youtube"></i>
                 <i class="fab fa-twitter"></i>
             </div>
         </div>
